# Hope

./: .gitignore  CMakeLists.txt  main.cpp  platformio.ini  sdkconfig.defaults
lib/HOPE_Sound_Classification_inferencing/: CMakeLists.txt  library.json
lib/HOPE_Sound_Classification_inferencing/examples/: esp32_microphone_continuous.ino  static_buffer.ino
lib/HOPE_Sound_Classification_inferencing/src/: HOPE_Sound_Classification_inferencing.h
lib/HOPE_Sound_Classification_inferencing/src/edge-impulse-sdk/dsp/dsp_engines/: ei_esp_dsp.h
lib/HOPE_Sound_Classification_inferencing/src/edge-impulse-sdk/porting/espressif/: ei_classifier_porting.cpp
lib/HOPE_Sound_Classification_inferencing/src/model-parameters/: model_variables.h
lib/HOPE_Sound_Classification_inferencing/src/tflite-model/: tflite_learn_1049740_4_compiled.h
lib/esp-dsp-fft/: CMakeLists.txt  library.json
lib/esp-dsp-fft/src/: dsps_fft2r.c  dsps_fft2r.h
main/: CMakeLists.txt  direction_estimate.c  direction_estimate.h  idf_component.yml  main.cpp
main/HOPE_Sound_Classification_inferencing/src/model-parameters/: model_metadata.h
main/HOPE_Sound_Classification_inferencing/src/tflite-model/: tflite_learn_1049740_4_compiled.cpp
